# podcast-llm-wiki

./: .env.example  .gitignore  LICENSE  README.md  podcasts.yaml.example  pyproject.toml
.claude/agents/: podcast-analyzer.md  podcast-ingester.md
.claude/commands/: analyze-podcast.md  ingest-podcast.md
docs/: analysis-template.md  wiki-schema-template.md
docs/superpowers/plans/: 2026-04-20-podcast-llm.md
docs/superpowers/specs/: 2026-04-20-podcast-llm-design.md
src/podcast_llm/: __init__.py  __main__.py  cli.py  downloader.py  ledger.py  logging_setup.py  pipeline.py  preflight.py  transcriber.py
src/podcast_llm/parsers/: analysis_sections.py
src/podcast_llm/utils/: filesystem.py
src/podcast_llm/wiki/: vault.py  writer.py
src/podcast_llm_wiki/: __init__.py  __main__.py  cli.py  config.py  downloader.py  ledger.py  logging_setup.py  pipeline.py  preflight.py  transcriber.py
src/podcast_llm_wiki/parsers/: analysis_sections.py
src/podcast_llm_wiki/wiki/: vault.py  writer.py
tests/: conftest.py
tests/fixtures/: README.md  podcasts_minimal.yaml
tests/integration/: test_smoke.py
tests/unit/: test_analysis_sections.py  test_cli.py  test_config.py  test_downloader.py  test_filesystem.py  test_ledger.py  test_logging_setup.py  test_pipeline.py  test_preflight.py  test_transcriber.py  test_vault.py  test_wiki_writer.py
